@@ -29,60 +29,68 @@ public class PRTSCommand implements Command
             List<String> params = event.getCommandParameters();
             if (params.isEmpty()) throw new NullBotMsgException("[PRTS] ❌参数不足");
 
-            String option = params.get(0);
-            String keyword = params.get(1);
+            String option = params.getFirst();
+            String keyword;
             String base64;
+
             try {
-                base64 = switch (option)
-                {
-                    case "语音" -> webScreenCapturer.capture(
-                            "https://prts.wiki/w/" + keyword, 1024, 5120,
-                            List.of("#voice-table-root"),
-                            List.of(".backToTop", "#rightToc", ".z-1.float-right.select-none"),
-                            List.of("a[class*='z-1 float-right select-none']")
-                    );
-
-                    case "档案" -> webScreenCapturer.capture(
-                            "https://prts.wiki/w/" + keyword, 1024, 5120,
-                            List.of("//table[.//th//b[contains(text(),'人员档案')]]"),
-                            List.of(".backToTop", "#rightToc", ".mw-collapsible-toggle"),
-                            List.of("//table[.//th//b[contains(.,'人员档案')]]//button[contains(@class,'mw-collapsible-toggle')]")
-                    );
-
-                    case "密录" -> webScreenCapturer.capture(
-                            "https://prts.wiki/w/" + keyword, 1024, 5120,
-                            List.of("//table[.//th//b[contains(text(),'干员密录')]]"),
-                            List.of(".backToTop", "#rightToc", ".mw-collapsible-toggle"),
-                            List.of("//table[.//th//b[contains(.,'干员密录')]]//button[contains(@class,'mw-collapsible-toggle')]")
-                    );
-
-                    case "悖论" -> webScreenCapturer.capture(
-                            "https://prts.wiki/w/" + keyword, 1024, 5120,
-                            List.of("//table[.//th//b[contains(text(),'悖论模拟')]]"),
-                            List.of(".backToTop", "#rightToc", ".mw-collapsible-toggle"),
-                            List.of("//table[.//th//b[contains(.,'悖论模拟')]]//button[contains(@class,'mw-collapsible-toggle')]")
-                    );
-
-                    default -> {
-                        keyword = String.join(" ", params.subList(0, params.size()));
-                        yield webScreenCapturer.capture(
+                if (List.of("语音", "档案", "密录", "悖论").contains(option)) {
+                    if (params.size() < 2) throw new NullBotMsgException("[PRTS] ❌参数不足");
+                    keyword = params.get(1);
+                    base64 = switch (option)
+                    {
+                        case "语音" -> webScreenCapturer.capture(
                                 "https://prts.wiki/w/" + keyword, 1024, 5120,
-                                List.of("#bodyContent"),
-                                List.of(
-                                        ".backToTop", "#toc", "#rightToc",
-                                        ".music-btn", "#calc", "#equip-selector",
-                                        "#干员模型", "#spine-root",
-                                        "#注释与链接", "#catlinks"
-                                ),
-                                List.of(
-                                        "input[onchange*='switchDisplay第一天赋算法']",
-                                        "input[onchange*='switchDisplay第一天赋潜能']",
-                                        "input[onchange*='switchDisplay第二天赋算法']",
-                                        "input[onchange*='switchDisplay第二天赋潜能']"
-                                )
+                                List.of("#voice-table-root"),
+                                List.of(".backToTop", "#rightToc", ".z-1.float-right.select-none"),
+                                List.of("a[class*='z-1 float-right select-none']")
                         );
-                    }
-                };
+
+                        case "档案" -> webScreenCapturer.capture(
+                                "https://prts.wiki/w/" + keyword, 1024, 5120,
+                                List.of("//table[.//th//b[contains(text(),'人员档案')]]"),
+                                List.of(".backToTop", "#rightToc", ".mw-collapsible-toggle"),
+                                List.of("//table[.//th//b[contains(.,'人员档案')]]//button[contains(@class,'mw-collapsible-toggle')]")
+                        );
+
+                        case "密录" -> webScreenCapturer.capture(
+                                "https://prts.wiki/w/" + keyword, 1024, 5120,
+                                List.of("//table[.//th//b[contains(text(),'干员密录')]]"),
+                                List.of(".backToTop", "#rightToc", ".mw-collapsible-toggle"),
+                                List.of("//table[.//th//b[contains(.,'干员密录')]]//button[contains(@class,'mw-collapsible-toggle')]")
+                        );
+
+                        case "悖论" -> webScreenCapturer.capture(
+                                "https://prts.wiki/w/" + keyword, 1024, 5120,
+                                List.of("//table[.//th//b[contains(text(),'悖论模拟')]]"),
+                                List.of(".backToTop", "#rightToc", ".mw-collapsible-toggle"),
+                                List.of("//table[.//th//b[contains(.,'悖论模拟')]]//button[contains(@class,'mw-collapsible-toggle')]")
+                        );
+
+                        default ->  throw new NullBotMsgException("[PRTS] ❌无此操作");
+                    };
+
+                } else {
+
+                    keyword = String.join(" ", params.subList(0, params.size()));
+                    base64 = webScreenCapturer.capture(
+                            "https://prts.wiki/w/" + keyword, 1024, 5120,
+                            List.of("#bodyContent"),
+                            List.of(
+                                    ".backToTop", "#toc", "#rightToc",
+                                    ".music-btn", "#calc", "#equip-selector",
+                                    "#干员模型", "#spine-root",
+                                    "#注释与链接", "#catlinks"
+                            ),
+                            List.of(
+                                    "input[onchange*='switchDisplay第一天赋算法']",
+                                    "input[onchange*='switchDisplay第一天赋潜能']",
+                                    "input[onchange*='switchDisplay第二天赋算法']",
+                                    "input[onchange*='switchDisplay第二天赋潜能']"
+                            )
+                    );
+                }
+
             } catch (NullBotMsgException e) {
                 throw e;
             } catch (Exception e) {
